fix header height on mobile issue

--- a/css/site.styl
+++ b/css/site.styl
@@ -133,9 +133,8 @@ img
     opacity: 0
 
 #header-container
-  height: ($font-size-logo + 12)
-  .row, .col
-    height: 100%
+  .u-holder
+    min-height: ($font-size-logo + 12)
 
 .site-title
   font-size: $font-size-logo
@@ -355,7 +354,8 @@ article.page
     padding: $margin-tiny 0 $margin-smaller 0
 
   #header-container
-    height: ($font-size-logo + 12)
+    .u-holder
+      min-height: ($font-size-logo + 12)
 
   .site-title
     font-size: $font-size-logo
@@ -429,7 +429,8 @@ article.page
     padding: $margin-tiny 0 $margin-smaller 0
 
   #header-container
-    height: ($font-size-logo + 12)
+    .u-holder
+      min-height: ($font-size-logo + 12)
 
   .site-title
     font-size: $font-size-logo
@@ -501,7 +502,8 @@ article.page
     padding: $margin-tiny 0 $margin-smaller 0
 
   #header-container
-    height: ($font-size-logo + 12)
+    .u-holder
+      min-height: ($font-size-logo + 12)
 
   .site-title
     font-size: $font-size-logo
@@ -573,7 +575,8 @@ article.page
     padding: $margin-tiny 0 $margin-smaller 0
 
   #header-container
-    height: ($font-size-logo + 12)
+    .u-holder
+      min-height: ($font-size-logo + 12)
 
   .site-title
     font-size: $font-size-logo
@@ -645,7 +648,8 @@ article.page
     padding: $margin-tiny 0 $margin-smaller 0
 
   #header-container
-    height: ($font-size-logo + 12)
+    .u-holder
+      min-height: ($font-size-logo + 12)
 
   .site-title
     font-size: $font-size-logo
@@ -720,7 +724,8 @@ article.page
     padding: $margin-tiny 0 $margin-smaller 0
 
   #header-container
-    height: ($font-size-logo + 12)
+    .u-holder
+      min-height: ($font-size-logo + 12)
 
   .site-title
     font-size: $font-size-logo
@@ -783,7 +788,7 @@ article.page
   // HEADER
 
   #header
-    padding: $margin-tiny 0 $margin-smaller 0
+    padding: $margin-tiny 0
 
   .menu-item
     margin: 0 ( $margin-small / 2 ) 0 0
@@ -840,7 +845,7 @@ article.page
   // HEADER
 
   #header
-    padding: $margin-tiny 0 $margin-smaller 0
+    padding: $margin-tiny 0
 
   .menu-item
     margin: 0 ( $margin-small / 2 ) 0 0
